--- a/_includes/score/header.html
+++ b/_includes/score/header.html
@@ -1,8 +1,6 @@
 <header id="score-header">
 <h1 class="score-title">{{ page.title }}</h1>
 {% if page.info or page.info_file %}
-<span class="modal-trig" title="About the score">
-    <div id="score-info-open">i</div>
-</span>
+<button id="score-info-open" class="score-button" title="About the score">[i]</button>
 {% endif %}
 </header>
