Update tutorial to use .score-button

--- a/scores/tutorial/styles.scss
+++ b/scores/tutorial/styles.scss
@@ -16,17 +16,6 @@ p {
 	margin: 0;
 }
 
-#score-info-open.highlight {
+.highlight {
 	outline: 1px solid $highlight-color;
-}
-
-#score-footer {
-	button.highlight {
-		outline: 1px solid $highlight-color;
-		// background-color: $highlight-color;
-	}
-	input.highlight {
-		outline: 1px solid $highlight-color;
-		// background-color: $highlight-color;
-	}
 }
