--- a/_includes/score/footer.html
+++ b/_includes/score/footer.html
@@ -7,7 +7,7 @@
             </g>
         </svg>
     </button><!--
- --><button id="score-play" class="score-button" title="Play/pause">
+ --><button id="score-play" class="score-button" title="Play/pause score">
         <svg viewBox="0 0 128 128" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <g id="play">
                 <path d="M62.7434149,18.1198759 C63.5701633,16.6880186 64.9113219,16.6892907 65.7373358,18.1198759 L118.173415,108.934662 C119.000164,110.366519 118.328483,111.527269 116.676455,111.527269 L11.804296,111.527269 C10.1507991,111.527269 9.48132156,110.365247 10.3073355,108.934662 L62.7434149,18.1198759 Z" transform="translate(64.240405, 64.286864) rotate(90.000000) translate(-64.240405, -64.286864) "></path>
@@ -18,7 +18,7 @@
             </g>
         </svg>
     </button><!--
- --><button id="score-stop" class="score-button" title="Stop">
+ --><button id="score-stop" class="score-button" title="Stop score">
         <svg viewBox="0 0 128 128" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <g id="stop">
                 <rect x="17" y="17" width="94.4800034" height="94.4800034" rx="3"></rect>
@@ -33,7 +33,7 @@
         </svg>
     </button><!--
  --><input id="score-pointer" type="number" value="0" pattern="\d*" readonly="true" title="Score pointer" /><!-- step="1" --><!--
- -->{% if page.settings or page.settings_file %}<button id="score-settings-open" class="score-button" title="Settings">
+ -->{% if page.settings or page.settings_file %}<button id="score-settings-open" class="score-button" title="Score settings">
          <svg viewBox="0 0 128 128" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
              <g id="settings">
                  <path d="M17,10 L17,118.57"></path>
