--- a/css/main.scss
+++ b/css/main.scss
@@ -52,5 +52,6 @@ $on-laptop:        800px;
     "typography",
     "layout",
     "description-list",
+    "work-list",
     "syntax-highlighting"
 ;
