Add pitch class transposition input, not yet implemented in scores

--- a/_includes/score/settings/pitch-classes.html
+++ b/_includes/score/settings/pitch-classes.html
@@ -21,3 +21,10 @@
         <input type="radio" name="settings-notename-preference" value="flats"> flats
     </div>
 </div>
+
+<div>
+    <p>Transpose by:</p>
+    <div style="margin: 1em 0;">
+        <input type="number" min="-11" max="11" step="1" value="0" id="settings-pc-transpose"> semitones
+    </div>
+</div>
