Change main score script names to the more standard 'index.js'

--- a/_layouts/score.html
+++ b/_layouts/score.html
@@ -19,6 +19,6 @@ layout: compress
     {% include score/footer.html %}
     {% include score/modals.html %}
     {% include score/scripts.html %}
-    <script src="script.js" charset="utf-8"></script>
+    <script src="index.js" charset="utf-8"></script>
 </body>
 </html>
