--- a/_includes/score/scripts.html
+++ b/_includes/score/scripts.html
@@ -1,10 +1,10 @@
 {% if jekyll.environment == "offline" %}
-    <script src="{{ site.baseurl }}/js/d3.v4.min.js" charset="utf-8"></script>
+    <script src="{{ '/js/d3.v4.min.js' | prepend: assets_url }}" charset="utf-8"></script>
 {% else %}
     <script src="//d3js.org/d3.v4.min.js" charset="utf-8"></script>
 {% endif %}
 
-<script src="{{ site.baseurl }}/js/vectorscores.js" charset="utf-8"></script>
+<script src="{{ '/js/vectorscores.js' | prepend: assets_url }}" charset="utf-8"></script>
 {% for module in page.vs_modules %}
-<script src="{{ site.baseurl }}/js/vs/modules/{{ module }}.js" charset="utf-8"></script>
+<script src="{{ assets_url }}/js/vs/modules/{{ module }}.js" charset="utf-8"></script>
 {% endfor %}
