--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,23 +1,20 @@
 ---
 layout: compress
 ---
+{% assign assets_url = site.assetsurl | prepend: site.baseurl %}
+
 <!DOCTYPE html>
 <html>
+    {% include page/head.html %}
+    <body>
+        {% include page/header.html %}
 
-  {% include page/head.html %}
+        <div class="page-content">
+            <div class="wrapper">
+                {{ content }}
+            </div>
+        </div>
 
-  <body>
-
-    {% include page/header.html %}
-
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </div>
-
-    {% include page/footer.html %}
-
-  </body>
-
+        {% include page/footer.html %}
+    </body>
 </html>
