--- a/_layouts/score.html
+++ b/_layouts/score.html
@@ -1,13 +1,15 @@
 ---
 layout: compress
 ---
+{% assign assets_url = site.assetsurl | prepend: site.baseurl %}
+
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% if page.title %}{{ page.title }} | {{ site.title }}{% else %}{{ site.title }}{% endif %}</title>
-    <link rel="stylesheet" href="{{ "/css/score.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ '/css/score.css' | prepend: assets_url }}">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
