--- a/scores/time-control/styles.scss
+++ b/scores/time-control/styles.scss
@@ -1,11 +1,12 @@
 ---
 ---
-$t-time: 1s;
+$t-time: 300ms;
 
 main {
 	padding: 8px;
 }
-.event-span {
+
+#events span {
 	font-family: Courier;
 	display: inline-block;
 	padding: 0.5em;
@@ -13,20 +14,23 @@ main {
 	border: 2px solid #eee;
 	border-radius: 20px;
 	transition: border-radius $t-time, border-color $t-time;
+
+	&.green {
+		border-color: rgba(0, 255, 0, 0.75);
+		transition: border-color $t-time;
+	}
+
+	&.blue {
+		border-color: rgba(0, 0, 255, 0.75);
+		transition: border-color $t-time;
+	}
+
 	&.box {
 		border-radius: 0px;
 		transition: border-radius $t-time;
 	}
 }
-.active {
-	border-color: rgba(0, 255, 0, 0.75);
-	transition: border-color $t-time;
-}
-.other {
-	border-color: rgba(0, 0, 255, 0.75);
-	transition: border-color $t-time;
-}
 
-.ws, .ws h3 {
+.websockets, .websockets h3 {
 	font-family: Courier;
 }
