Use HTML form to handle options query string and reload

--- a/_jekyll/includes/score/settings/generate-button.html
+++ b/_jekyll/includes/score/settings/generate-button.html
@@ -1,1 +1,1 @@
-<button id="settings-generate">Generate new score</button>
+<button id="settings-generate" type="submit">Generate new score</button>
