--- a/_jekyll/includes/score/settings/pitch-classes.html
+++ b/_jekyll/includes/score/settings/pitch-classes.html
@@ -1,23 +1,15 @@
 <div id="settings-pc">
     <section>
         <h4>Display pitch classes as:</h4>
-        {% include score/settings/radio-group.html name='settings-pc-display' values='integer, name' labels='Pitch class numbers, Note names' %}
+        {% include score/settings/radio-group.html name='pitch-classes' values='numbers, names' labels='Pitch class numbers, Note names' %}
     </section>
 
-    <section id="pitchclass-preference">
+    <section id="pitch-classes-numbers-preferences">
         <h4>Display pitch classes 10 and 11 as:</h4>
-        {% include score/settings/radio-group.html name='settings-pc-preference' values='te, ab' labels='T and E, A and B' %}
+        {% include score/settings/radio-group.html name='prefer' values='te, ab' labels='T and E, A and B' %}
     </section>
-
-    <section id="notename-preference">
+    <section id="pitch-classes-names-preferences">
         <h4>Display accidentals as:</h4>
-        {% include score/settings/radio-group.html name='settings-notename-preference' values='sharps, flats' labels='sharps, flats' %}
-    </section>
-
-    <section>
-        <h4>Transpose by:</h4>
-        <div class="settings-group">
-            <label><input type="number" min="-11" max="11" step="1" value="0" id="settings-pc-transpose"> semitones</label>
-        </div>
+        {% include score/settings/radio-group.html name='prefer' values='sharps, flats' labels='sharps, flats' %}
     </section>
 </div>
