Rename settings modal to options, keep UI controls as settings

--- a/_jekyll/includes/score/settings/pitch-classes.html
+++ b/_jekyll/includes/score/settings/pitch-classes.html
@@ -1,4 +1,4 @@
-<div id="settings-pc">
+<div id="settings-pitch-classes">
     <section>
         <h4>Display pitch classes as:</h4>
         {% include score/settings/radio-group.html name='pitch-classes' values='numbers, names' labels='Pitch class numbers, Note names' %}
