--- a/_jekyll/includes/score/footer.html
+++ b/_jekyll/includes/score/footer.html
@@ -32,9 +32,9 @@
         </svg>
     </button><!--
  --><input id="score-pointer" type="number" value="0" pattern="\d*" readonly="true" title="Score pointer" /><!-- step="1" --><!--
- -->{% if page.settings or page.settings_file %}<button id="score-settings-open" class="score-button" title="Score settings">
+ -->{% if page.options or page.options_file %}<button id="score-options-open" class="score-button" title="Score options">
          <svg viewBox="0 0 128 128" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-             <g id="settings">
+             <g id="score-options-icon">
                  <path d="M17,10 L17,118.57"></path>
                  <path d="M1.25,25.75 L32.75,25.75"></path>
 
