--- a/_jekyll/includes/score/modals.html
+++ b/_jekyll/includes/score/modals.html
@@ -1,4 +1,4 @@
-{% if page.info or page.info_file or page.settings or page.settings_file %}
+{% if page.info or page.info_file or page.options or page.options_file %}
 <div id="score-modal-overlay" class="modal-overlay">
 
 {% if page.info or page.info_file %}
@@ -22,15 +22,15 @@
     </div>
 {% endif %}
 
-{% if page.settings or page.settings_file%}
-    <div id="score-settings-modal" class="modal-content">
-        <span id="score-settings-close" class="modal-close">×</span>
-        <h2>Settings</h2>
-        {% if page.settings %}
-            {{ page.settings }}
-        {% else if page.settings_file %}
-            {% capture settings_include %}{% include_relative {{ page.settings_file }} %}{% endcapture %}
-            {{ settings_include | markdownify }}
+{% if page.options or page.options_file%}
+    <div id="score-options-modal" class="modal-content">
+        <span id="score-options-close" class="modal-close">×</span>
+        <h2>Options</h2>
+        {% if page.options %}
+            {{ page.options }}
+        {% else if page.options_file %}
+            {% capture options_include %}{% include_relative {{ page.options_file }} %}{% endcapture %}
+            {{ options_include | markdownify }}
         {% endif %}
     </div>
 {% endif %}
