--- a/assets/_sass/score/_controls.scss
+++ b/assets/_sass/score/_controls.scss
@@ -3,7 +3,7 @@
     padding: 0;
     border: 0;
     width: $footer-height;
-    max-width: 20%; // for mobile--move input to settings modal
+    max-width: 20%; // for mobile--move input to options modal
     height: $footer-height - 2px;
     display: inline-block;
     box-sizing: border-box;
@@ -65,6 +65,6 @@ input[type=number]::-webkit-outer-spin-button {
     font-size: $unit;
 }
 
-#score-settings-open {
+#score-options-open {
     float: right;
 }
