Update generate button language

--- a/_jekyll/includes/score/settings/generate-button.html
+++ b/_jekyll/includes/score/settings/generate-button.html
@@ -1,1 +1,1 @@
-<button id="settings-generate" type="submit">Generate new score</button>
+<button id="settings-generate" type="submit">Apply and generate new score</button>
