--- a/_jekyll/includes/score/scripts.html
+++ b/_jekyll/includes/score/scripts.html
@@ -1,7 +1,7 @@
 {% if jekyll.environment == "offline" %}
     <script src="{{ '/js/lib/d3.v4.min.js' | prepend: assets_url }}" charset="utf-8"></script>
 {% else %}
-    <script src="//d3js.org/d3.v4.min.js" charset="utf-8"></script>
+    <script src="https://d3js.org/d3.v4.min.js" charset="utf-8"></script>
 {% endif %}
 
 <script src="{{ '/js/vectorscores.js' | prepend: assets_url }}" charset="utf-8"></script>
