Change play/pause icon with native method, not d3

--- a/_jekyll/includes/score/footer.html
+++ b/_jekyll/includes/score/footer.html
@@ -6,7 +6,7 @@
             </g>
         </svg>
     </button><!--
- --><button id="score-play" class="score-button" title="Play/pause score">
+ --><button id="score-play" class="score-button play" title="Play/pause score">
         <svg viewBox="0 0 128 128" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <g id="play">
                 <path d="M62.7434149,18.1198759 C63.5701633,16.6880186 64.9113219,16.6892907 65.7373358,18.1198759 L118.173415,108.934662 C119.000164,110.366519 118.328483,111.527269 116.676455,111.527269 L11.804296,111.527269 C10.1507991,111.527269 9.48132156,110.365247 10.3073355,108.934662 L62.7434149,18.1198759 Z" transform="translate(64.240405, 64.286864) rotate(90.000000) translate(-64.240405, -64.286864) "></path>
