--- a/assets/_sass/score/_controls.scss
+++ b/assets/_sass/score/_controls.scss
@@ -14,6 +14,7 @@
     &:hover {
         outline: 2px solid $layout-color-light;
     }
+
     &:active, &:focus {
         outline: 2px solid #ddd;
     }
@@ -23,6 +24,7 @@
             stroke: #ddd;
         }
     }
+
     svg {
         width: 16px;
         height: 16px;
@@ -30,11 +32,16 @@
             stroke: #000;
             stroke-width: 10;
             fill: none;
-            &.hide { // for play/pause
-                display: none;
-            }
         }
     }
+}
+
+.score-button.play g#pause {
+    display: none;
+}
+
+.score-button.pause g#play {
+    display: none;
 }
 
 #score-pointer {
