Simplify setting of play/pause control

--- a/assets/_sass/score/_controls.scss
+++ b/assets/_sass/score/_controls.scss
@@ -36,12 +36,18 @@
     }
 }
 
-.score-button.play g#pause {
+.score-button g#pause {
     display: none;
 }
 
-.score-button.pause g#play {
-    display: none;
+.score-button.pause {
+    g#play {
+        display: none;
+    }
+
+    g#pause {
+        display: inline;
+    }
 }
 
 #score-pointer {
