--- a/_includes/page/footer.html
+++ b/_includes/page/footer.html
@@ -11,12 +11,12 @@
                 <ul class="social-media-list">
                 {% if site.github_username %}
                     <li>
-                        {% include icons-logos/footer-icon.html url='https://github.com' username=site.github_username icon='github.svg' %}
+                        {% include 'icons-logos/footer-icon.html', url: 'https://github.com', username: site.github_username icon: 'github.svg' %}
                     </li>
                 {% endif %}
                 {% if site.twitter_username %}
                     <li>
-                        {% include icons-logos/footer-icon.html url='https://twitter.com' username=site.twitter_username icon='twitter.svg' %}
+                        {% include 'icons-logos/footer-icon.html', url:'https://twitter.com', username:site.twitter_username, icon: 'twitter.svg' %}
                     </li>
                 {% endif %}
                 {% if site.website %}
