Add typography styles

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,6 +2,7 @@
 
 @import url("variables.css");
 @import url("base.css");
+@import url("typography.css");
 
 /*
 @mixin media-query($device) {
@@ -10,8 +11,6 @@
     }
 }
 @import
-    "base",
-    "typography",
     "layout",
     "description-list",
     "work-list",
