--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,7 @@
 @import url("base.css");
 @import url("typography.css");
 @import url("layout.css");
+@import url("description-list.css");
 
 /*
 @mixin media-query($device) {
@@ -12,8 +13,6 @@
     }
 }
 @import
-    "description-list",
     "work-list",
-    "syntax-highlighting"
 ;
 */
