Distribute mixins and lint css
- move score-specific mixins to score dir, to handle later
- move text shadow mixin to ad;sr

--- a/scores/adsr/styles.scss
+++ b/scores/adsr/styles.scss
@@ -59,7 +59,11 @@ main, svg.main {
 .timbre,
 .pitch-range,
 .pitch-range-numeric {
-    @include textShadowOutline();
+  text-shadow:
+    0 -1px 1px white,
+    1px 0 1px white,
+    0 1px 1px white,
+    -1px 0 1px white;
 }
 
 .articulations,
