Clean up sass files, target unconverted scores to ignore

--- a/assets/css/score/layout.css
+++ b/assets/css/score/layout.css
@@ -56,7 +56,7 @@ h1 {
     display: inline-block;
     box-sizing: border-box;
 
-    font-size: calc(var(--layout-unit * 2);
+    font-size: calc(var(--layout-unit * 2));
     line-height: 1;
     white-space: nowrap;
     max-width: 85%;
