--- a/assets/css/score/variables.css
+++ b/assets/css/score/variables.css
@@ -1,10 +1,10 @@
 :root {
-    --layout-color-bg: white;
-    --layout-color-light: #eeeeee;
-    --layout-trans-time: 0.6s;
-    --layout-header-font-stack: 'Times New Roman', serif;
-    --layout-font-stack: Courier, monospace;
-    --layout-border: 2px solid var(--layout-color-light);
-    --layout-unit: 16px;
-    --footer-height: calc(4 * var(--layout-unit));
+  --layout-color-bg: white;
+  --layout-color-light: #eee;
+  --layout-trans-time: 0.6s;
+  --layout-header-font-stack: 'Times New Roman', serif;
+  --layout-font-stack: Courier, monospace;
+  --layout-border: 2px solid var(--layout-color-light);
+  --layout-unit: 16px;
+  --footer-height: calc(4 * var(--layout-unit));
 }
