--- a/assets/css/score.css
+++ b/assets/css/score.css
@@ -2,9 +2,9 @@
 @import url("score/layout.css");
 @import url("score/set-layout.css");
 @import url("score/controls.css");
+@import url("score/modal.css");
 
 /*
-@import url("score/modal");
 @import url("score/main");
 @import url("score/settings");
 @import url("work-list");
