Add remaining score styles

--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -5,12 +5,4 @@
 @import url("page/typography.css");
 @import url("page/layout.css");
 @import url("page/description-list.css");
-@import url("page/work-list.css");
-
-/*
-@mixin media-query($device) {
-    @media screen and (max-width: $device) {
-        @content;
-    }
-}
-*/
+@import url("../work-list.css");
