Fix work-list.css import

--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -5,4 +5,4 @@
 @import url("page/typography.css");
 @import url("page/layout.css");
 @import url("page/description-list.css");
-@import url("../work-list.css");
+@import url("work-list.css");
