Convert Bravura score w/ temporary font injection

--- a/scores/Bravura/styles.css
+++ b/scores/Bravura/styles.css
@@ -1,13 +1,7 @@
----
----
-
-@import "mixins";
-@include BravuraFont();
+/* @import "mixins"; */
+/* @include BravuraFont(); */
 
 main {
-    -webkit-user-select: inherit; // Chrome, Safari
-    -moz-user-select: inherit; // Firefox
-    -ms-user-select: inherit; // IE 10+
     user-select: inherit;
 }
 
