--- a/assets/css/score.css
+++ b/assets/css/score.css
@@ -38,9 +38,7 @@ footer {
   height: var(--footer-height);
   margin: 0;
   box-sizing: border-box;
-  font-family: courier
-,
-monospace;
+  font-family: courier, monospace;
   font-family: var(--layout-font-stack);
   cursor: default;
 
@@ -68,18 +66,14 @@ footer.show {
 header {
   padding: 0;
   top: 0;
-  border-bottom: 2px
-solid
-#eee;
+  border-bottom: 2px solid #eee;
   border-bottom: var(--layout-border);
 }
 
 footer {
   padding: 0;
   bottom: 0;
-  border-top: 2px
-solid
-#eee;
+  border-top: 2px solid #eee;
   border-top: var(--layout-border);
 }
 
@@ -106,9 +100,7 @@ h1 {
 
 .score-title,
 .modal-content .score-title {
-  font-family: 'Times New Roman'
-,
-serif;
+  font-family: 'Times New Roman', serif;
   font-family: var(--layout-header-font-stack);
   font-style: italic;
   font-weight: bold;
@@ -179,9 +171,7 @@ serif;
 }
 
 input {
-  font-family: courier
-,
-monospace;
+  font-family: courier, monospace;
   font-family: var(--layout-font-stack);
   text-align: center;
 }
@@ -194,9 +184,7 @@ input[type=number]::-webkit-outer-spin-button {
 
 #score-info-open {
   float: right;
-  font-family: courier
-,
-monospace;
+  font-family: courier, monospace;
   font-family: var(--layout-font-stack);
   font-size: 16px;
   font-size: var(--layout-unit);
@@ -226,9 +214,7 @@ monospace;
 
 .modal-content {
   background: #fff;
-  font-family: courier
-,
-monospace;
+  font-family: courier, monospace;
   font-family: var(--layout-font-stack);
   font-weight: normal;
   padding: 16px;
